Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100094

iOS A11Y unexpected reset

    XMLWordPrintable

Details

    • iOS/tvOS/watchOS
    • b006d6d9d (dev), 8213f639c (6.6), 6eefbf741 (6.5)

    Description

      Context

      Focus on iOS Phone with VoiceOver activated should be shown stay at the element if new items appear/disappear so that a person can navigate through. It has to fulfill requirements of WCAG 2.0 / WCAG2ICT

      Expectations

      • A11Y Focus stays if other items get added / removed / shown / hidden.
      • A11Y Focus jumps to the next supported item if the current gets hidden or removed.

      Observation

      • Right now changes reset the whole A11Y information which does not allow proper navigation.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vestbo Tor Arne Vestbø
            michl86 Michael Piendl
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes